// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFilteredQueryAndStatusFilter handles must and must_not queries with a status filter 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "simple_query_string": Object {
            "fields": Array [
              "error.type",
              "monitor.id",
              "monitor.name",
              "monitor.status",
              "monitor.type",
              "monitor.url",
              "url.domain",
              "url.full",
              "url.path",
              "url.scheme",
            ],
            "query": "http",
          },
        },
        Object {
          "range": Object {
            "monitor.duration.us": Object {
              "lt": 2000,
            },
          },
        },
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
      "must_not": Array [
        Object {
          "simple_query_string": Object {
            "fields": Array [
              "error.type",
              "monitor.id",
              "monitor.name",
              "monitor.status",
              "monitor.type",
              "monitor.url",
              "url.domain",
              "url.full",
              "url.path",
              "url.scheme",
            ],
            "query": "production",
          },
        },
        Object {
          "term": Object {
            "down": true,
          },
        },
      ],
    },
  },
  "statusFilter": "up",
}
`;

exports[`getFilteredQueryAndStatusFilter handles must_not queries 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "simple_query_string": Object {
            "fields": Array [
              "error.type",
              "monitor.id",
              "monitor.name",
              "monitor.status",
              "monitor.type",
              "monitor.url",
              "url.domain",
              "url.full",
              "url.path",
              "url.scheme",
            ],
            "query": "http",
          },
        },
        Object {
          "range": Object {
            "monitor.duration.ms": Object {
              "lt": 100,
            },
          },
        },
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
      "must_not": Array [
        Object {
          "simple_query_string": Object {
            "fields": Array [
              "error.type",
              "monitor.id",
              "monitor.name",
              "monitor.status",
              "monitor.type",
              "monitor.url",
              "url.domain",
              "url.full",
              "url.path",
              "url.scheme",
            ],
            "query": "production",
          },
        },
      ],
    },
  },
  "statusFilter": undefined,
}
`;

exports[`getFilteredQueryAndStatusFilter handles simple_query_string 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "simple_query_string": Object {
            "fields": Array [
              "error.type",
              "monitor.id",
              "monitor.name",
              "monitor.status",
              "monitor.type",
              "monitor.url",
              "url.domain",
              "url.full",
              "url.path",
              "url.scheme",
            ],
            "query": "http",
          },
        },
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
      "must_not": Array [],
    },
  },
  "statusFilter": undefined,
}
`;

exports[`getFilteredQueryAndStatusFilter handles term query  1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "term": Object {
            "down": true,
          },
        },
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
      "must_not": Array [],
    },
  },
  "statusFilter": undefined,
}
`;

exports[`getFilteredQueryAndStatusFilter returns a range + id filter when status filter is absent 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "match": Object {
            "monitor.id": Object {
              "operator": "and",
              "query": "theID",
            },
          },
        },
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
      "must_not": Array [],
    },
  },
  "statusFilter": undefined,
}
`;

exports[`getFilteredQueryAndStatusFilter returns a range + id filter with status value 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "match": Object {
            "monitor.id": Object {
              "operator": "and",
              "query": "theID",
            },
          },
        },
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
      "must_not": Array [],
    },
  },
  "statusFilter": "down",
}
`;

exports[`getFilteredQueryAndStatusFilter returns a range filter and a status value when no other filters are present 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
      "must": Array [],
      "must_not": Array [],
    },
  },
  "statusFilter": "down",
}
`;

exports[`getFilteredQueryAndStatusFilter returns a range filter for empty filters object 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "filter": Array [
        Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "startRange",
              "lte": "endRange",
            },
          },
        },
      ],
    },
  },
}
`;
